--- a/src/DoctorRep_Cus.form
+++ b/src/DoctorRep_Cus.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.JProgressBar" name="jProgressBar1">
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -105,12 +109,13 @@
             <Component class="javax.swing.JTable" name="prescription">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="5" rowCount="0">
-                    <Column editable="false" title="Name" type="java.lang.Object"/>
-                    <Column editable="false" title="ID" type="java.lang.Object"/>
-                    <Column editable="false" title="Time" type="java.lang.Object"/>
-                    <Column editable="false" title="Day" type="java.lang.Object"/>
-                    <Column editable="false" title="Date" type="java.lang.Object"/>
+                  <Table columnCount="6" rowCount="0">
+                    <Column editable="false" title="Checkdate" type="java.lang.Object"/>
+                    <Column editable="false" title="Need optical " type="java.lang.Object"/>
+                    <Column editable="false" title="Eye deflection" type="java.lang.Object"/>
+                    <Column editable="false" title="Nearsightedness" type="java.lang.Object"/>
+                    <Column editable="false" title="Farsightedness" type="java.lang.Object"/>
+                    <Column editable="false" title="Doctor Notes" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
@@ -126,7 +131,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Show_Property_96px_2.png"/>
+              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Treatment_96px_1.png"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
