--- a/src/Add_Date.form
+++ b/src/Add_Date.form
@@ -27,7 +27,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
+          <Component id="jPanel1" min="-2" pref="471" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -176,7 +176,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Schedule_96px.png"/>
+              <Image iconType="3" name="/icons8_Schedule_96px.png"/>
             </Property>
           </Properties>
         </Component>
@@ -259,7 +259,7 @@
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Realtime_48px.png"/>
+              <Image iconType="3" name="/icons8_Realtime_48px.png"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
@@ -267,7 +267,7 @@
         <Component class="javax.swing.JButton" name="jButton3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Show_Property_48px.png"/>
+              <Image iconType="3" name="/icons8_Show_Property_48px.png"/>
             </Property>
           </Properties>
           <Events>
@@ -283,7 +283,7 @@
               <Color blue="f0" green="f0" red="f0" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Broom_48px.png"/>
+              <Image iconType="3" name="/icons8_Broom_48px.png"/>
             </Property>
           </Properties>
           <Events>
@@ -293,7 +293,7 @@
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Caretaker_48px.png"/>
+              <Image iconType="3" name="/icons8_Caretaker_48px.png"/>
             </Property>
           </Properties>
           <Events>
