--- a/src/Add_Date_doctor.form
+++ b/src/Add_Date_doctor.form
@@ -162,7 +162,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Schedule_96px.png"/>
+              <Image iconType="3" name="/icons8_Schedule_96px.png"/>
             </Property>
           </Properties>
         </Component>
@@ -224,7 +224,7 @@
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Realtime_48px.png"/>
+              <Image iconType="3" name="/icons8_Realtime_48px.png"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
@@ -232,7 +232,7 @@
         <Component class="javax.swing.JButton" name="jButton3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Show_Property_48px.png"/>
+              <Image iconType="3" name="/icons8_Show_Property_48px.png"/>
             </Property>
           </Properties>
           <Events>
@@ -248,7 +248,7 @@
               <Color blue="f0" green="f0" red="f0" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Broom_48px.png"/>
+              <Image iconType="3" name="/icons8_Broom_48px.png"/>
             </Property>
           </Properties>
           <Events>
@@ -258,7 +258,7 @@
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Caretaker_48px.png"/>
+              <Image iconType="3" name="/icons8_Caretaker_48px.png"/>
             </Property>
           </Properties>
           <Events>
