--- a/src/Doctor.form
+++ b/src/Doctor.form
@@ -85,14 +85,14 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Doctor_Male_96px.png"/>
+              <Image iconType="3" name="/icons8_Doctor_Male_96px.png"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_New_Job_48px.png"/>
+              <Image iconType="3" name="/icons8_New_Job_48px.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Set Duty"/>
           </Properties>
@@ -103,7 +103,7 @@
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Timetable_48px.png"/>
+              <Image iconType="3" name="/icons8_Timetable_48px.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="See Dates"/>
           </Properties>
@@ -114,7 +114,7 @@
         <Component class="javax.swing.JButton" name="jButton3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Name_Tag_48px.png"/>
+              <Image iconType="3" name="/icons8_Name_Tag_48px.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Patiaint List "/>
           </Properties>
@@ -125,7 +125,7 @@
         <Component class="javax.swing.JButton" name="jButton6">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Shutdown_48px_1.png"/>
+              <Image iconType="3" name="/icons8_Shutdown_48px_1.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Logout"/>
           </Properties>
@@ -136,7 +136,7 @@
         <Component class="javax.swing.JButton" name="jButton7">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Task_Completed_48px.png"/>
+              <Image iconType="3" name="/icons8_Task_Completed_48px.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Start Jop"/>
           </Properties>
