--- a/src/EditInfo.form
+++ b/src/EditInfo.form
@@ -161,7 +161,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_More_Info_96px_2.png"/>
+              <Image iconType="3" name="/icons8_More_Info_96px_2.png"/>
             </Property>
           </Properties>
         </Component>
@@ -250,7 +250,7 @@
     <Component class="javax.swing.JToggleButton" name="jToggleButton1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Sign_Up_48px.png"/>
+          <Image iconType="3" name="/icons8_Sign_Up_48px.png"/>
         </Property>
       </Properties>
       <Events>
@@ -263,7 +263,7 @@
           <Color blue="0" green="0" id="Desktop" palette="2" red="0" type="palette"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Broom_48px.png"/>
+          <Image iconType="3" name="/icons8_Broom_48px.png"/>
         </Property>
       </Properties>
       <Events>
@@ -273,7 +273,7 @@
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Caretaker_48px.png"/>
+          <Image iconType="3" name="/icons8_Caretaker_48px.png"/>
         </Property>
       </Properties>
       <Events>
