--- a/src/Login.form
+++ b/src/Login.form
@@ -119,7 +119,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Broom_48px.png"/>
+              <Image iconType="3" name="/icons8_Broom_48px.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Clear"/>
           </Properties>
@@ -138,7 +138,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Login_48px_1.png"/>
+              <Image iconType="3" name="/icons8_Login_48px_1.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="SignIn"/>
           </Properties>
@@ -157,7 +157,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Close_Sign_48px_1.png"/>
+              <Image iconType="3" name="/icons8_Close_Sign_48px_1.png"/>
             </Property>
           </Properties>
           <Events>
@@ -187,7 +187,7 @@
         <Component class="javax.swing.JButton" name="jButton4">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Sign_Up_48px.png"/>
+              <Image iconType="3" name="/icons8_Sign_Up_48px.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="SignUp"/>
           </Properties>
