--- a/src/NotPan.form
+++ b/src/NotPan.form
@@ -125,7 +125,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Open_Envelope_96px_1.png"/>
+              <Image iconType="3" name="/icons8_Open_Envelope_96px_1.png"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
@@ -146,7 +146,7 @@
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Basim\Documents\NetBeansProjects\NEWDATABASE\src\icons8_Server_48px.png"/>
+              <Image iconType="3" name="/icons8_Caretaker_48px.png"/>
             </Property>
           </Properties>
           <Events>
